# More-is-not-always-better

./: .gitignore  README.md  README_zh.md  pyproject.toml  requirements.txt
configs/: columns_default.json  fusion_config.json  local_paths.example.json
manifests/: participants.csv  scene_manifest.csv
matlab/: README.md  run_eeg_bandpower_from_set.m
scripts/: build_manifests.py  run_end_to_end.py  run_eye_aoi_batch.py  run_fusion.py
src/more_is_not_always_better/: __init__.py  aoi.py  columns.py  discovery.py  eye_batch.py  filters.py  fusion.py  io.py
tests/: test_fusion_smoke.py
tests/fixtures/: participants.csv  scene_manifest.csv
tests/fixtures/aoi/: scene_01_aoi.json
tests/fixtures/eeg/: all_subjects_scene_level.csv
tests/fixtures/eye/: P01_scene01.csv  P01_scene02.csv
